styles/portfolio_styles.css
/*
    Personal Website - Portfolio Page Stylesheet
    Filename:   portfolio_styles.css

    Author:     Ryan Smaller
    Date:       4/13/25
*/
/* Header */
header {
    font-size: 0.7em;
    text-align: center;
    border: 0.3em solid darkblue;
    border-radius: 7px;
    margin: 0.2em;
    width: calc(100% - 1em);
    background-color: azure;
}

/* Generic Div Bordering and Margins */
div div, nav {
    border: 0.2em solid darkblue;
    border-radius: 7px;
    margin: 0.2em;
}

/* Organizational Containers */
#outer-div {
    margin-left: 0.2vh;
    display: flex;
    width: calc(100% - 1em);
}

.vertical-div {
    display: flex;
    flex-direction: column;
    max-width: calc((100% - 1.6em) / 3);
    height: 90vh;
}

/* Individual Portfolio Elements */
.portfolio-unit {
    display: flex;
    flex-direction: column;
    flex: 1;
    width: 35vw;
    max-width: calc(100% - 1.2em);
    padding: 0.2em;
    background-color: rgb(212, 229, 255);
    overflow: hidden;
}

.portfolio-unit p.portfolio-link, .portfolio-unit p.portfolio-name-header{ /* vertically center links and header text for each portfolio entry */
    line-height: 2em;
    padding-top: 0;
    padding-bottom: 0.2em;
}

.portfolio-unit p.portfolio-link {
    margin-bottom: 0.2em;
}

.portfolio-unit p {
    border: 0.2em solid darkblue;
    border-radius: 7px;
    margin: 0.06em 0.07em;
    padding: 0.2em;
    min-height: 2em;
    max-height: 2em;
    width: calc(100% - 0.7em);
    text-align: center;
    line-height: 1em;
    background-color: azure;
    font-size: 14px;
}

.portfolio-image-container {
    height: calc(100% - 8em);
    width: calc(100% - 0.7em);
    background-color: azure;
}

/* Portfolio Content */
#subnettergui-image-container { /* These selectors set the background image of the portfolio image containers so the images cut off instead of scale when the viewport is resized. */
    background-image: url("../resources/images/portfolios/subnettergui.png");
}

#subnetter-image-container {
    background-image: url("../resources/images/portfolios/subnetter.png");
}

#subnetterplusplus-image-container {
    background-image: url("../resources/images/portfolios/subnetterplusplus.png");
}

#cryptik-image-container {
    background-image: url("../resources/images/portfolios/cryptik.png");
}

#hashlet-image-container {
    background-image: url("../resources/images/portfolios/hashlet.png");
}

/* Navigation Menu */
#navbar {
    display: flex;
    flex-direction: column;
    flex: 1;
    max-width: calc(33vw - 1em);
    padding: 0.2em;
}

#navbar a {
    border: 0.2em solid darkblue;
    border-radius: 7px;
    margin: 0.2em;
    display: flex;
    flex: 1 !important;
    height: 100%;
    justify-content: center;
    align-items: center;
    min-height: 0;
    max-width: calc(100% - 0.6em);
    background-color: azure;
}

